button styling and alignment fixes

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -23,7 +23,7 @@
 }
 
 .outlink {
-  @apply flex justify-center items-center p-2 text-gray-300 border-2 border-white border-opacity-30 rounded-lg font-sourcesans font-light;
+  @apply flex justify-center items-center p-2 text-gray-300 border-2 border-white border-opacity-30 font-sourcesans font-light;
 }
 
 .outlink:hover {
